--- a/css/styles.css
+++ b/css/styles.css
@@ -98,3 +98,7 @@ body {
 .contact-info p a:hover {
     text-decoration: underline;
 }
+.contact-info .contact-label,
+.contact-info a {
+    color: white;
+}
