--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ body {
 }
 
 .menu a.selected {
-    color: yellow;
+    color: #FFDB70;
 }
 
 .content-wrapper {
@@ -49,7 +49,7 @@ body {
 }
 
 .sidebar h2, .sidebar p {
-    color: orange;
+    color: #FFDB70;
     margin-bottom: 10px;
 }
 
@@ -66,7 +66,7 @@ body {
 }
 
 .contact-label {
-    color: orange;
+    color: #FFDB70;
     font-size: 17px;
     margin-right: 5px; /* 調整右方間距 */
 }
@@ -78,7 +78,7 @@ body {
 }
 
 .separator {
-    border-top: 1px dashed orange;
+    border-top: 1px dashed #FFDB70;
     margin: 20px 0;
 }
 
